Adds updated html and styles

--- a/index.html
+++ b/index.html
@@ -2,68 +2,129 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Simple Mockup</title>
-  <link rel="stylesheet" href="styles/stylesWeek5.css">
+  <title>Student Final</title>
 
+  <link rel="stylesheet" href="./styles/styles.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+
 
 </head>
+
+
 <body>
 
+<div class="video-wrapper">
+  <video autoplay muted loop id="myVideo">
+  <source src="./assets/typing2.mp4" type="video/mp4">
+  </video>
+</div>
 
-  <div id="contentWrapper">
-<!-- This is the header -->
-    <nav class="box">
-      <ul id="navWrap" class="box">
-        <li class="navItem" class="box">Nav Link One</li>
-        <li class="navItem" class="box"><a href="#" class="box">
-          <img style="width:100px;" id="navlogo" src="images/fakelogo.png" alt="This is a logo" class="box">
-        </a>
-      </li>
-        <li class="navItem">Nav Link Two</li>
-      </ul>
-    </nav>
+  <div id="flexWrap">
+    <div style="width:100%;" id="introTitle">
+      <h3><a href="https://www.tech-moms.org/" target="_blank">Tech Moms Students</a> » MTech Lehi Cohort » Fall 2022 » <a href="https://www.linkedin.com/in/teakowg/" target="_blank">Instructor: Teako Warfield-Graham</a></h3>
+    </div>
 
-    <header id="hero" class="box">
-      <img id="heroImg" src="images/flowers.jpg" alt="" class="box">
-      <div id="heroCaption" class="box">
-        <h1>This is a headline</h1>
-        <a id="heroBtn" href="#" class="box">Button</a>
-      </div>
-    </header>
+    <!-- <div class="student card">
+      <h2>Amy Wood</h2>
+      <a href="./_studentSites/" target="_blank">Go!</a>
+    </div> -->
 
-    <section id="topContent" class="box">
-      <img id="articleImage" src="images/artgirl.jpg" alt="flowers" class="box">
-      <article id="topArticle">
-        <h2>This is a subhead</h2>
-              <p id="article" class="box">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </article>
+    <div class="student card">
+      <h2>Angelica Nash</h2>
+      <a href="./_studentSites/angelica/index.html" target="_blank">Go!</a>
+    </div>
 
-    </section>
+    <div class="student card">
+      <h2>Beth Pettey</h2>
+      <a href="./_studentSites/beth/pages/HomePage.html" target="_blank">Go!</a>
+    </div>
 
-    <section id="bottomContent">
-      <h2>Feature Table</h2>
-      <ul id="articleSpecs" class="box">
-        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-        <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
-        <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco</li>
-        <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
-        <li>Excepteur sint occaecat cupidatat non proident.</li>
-        <li>Cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
-      </ul>
-    </section>
+    <div class="student card">
+      <h2>Bia Bischoff</h2>
+      <a href="./_studentSites/bia/HomePage.html" target="_blank">Go!</a>
+    </div>
 
-    <footer class="box">
+    <div class="student card">
+      <h2>Brittney Tidwell</h2>
+      <a href="./_studentSites/brittney/PROJECT.html" target="_blank">Go!</a>
+    </div>
 
-      <p>123 Fake Street</p>
+    <div class="student card">
+      <h2>Catherine Williams</h2>
+      <a href="./_studentSites/catherine/html/1.html" target="_blank">Go!</a>
+    </div>
 
-    </footer>
+    <!-- <div class="student card">
+      <h2>Fanny Pena Castillo</h2>
+      <a href="./_studentSites/" target="_blank">Go!</a>
+    </div> -->
+
+    <div class="student card">
+      <h2>Hannah Heideman</h2>
+      <a href="./_studentSites/hannah/specialLife.html" target="_blank">Go!</a>
+    </div>
+
+    <div class="student card">
+      <h2>Heidi Hymas</h2>
+      <a href="./_studentSites/heidi/AllieMarie.html" target="_blank">Go!</a>
+    </div>
+
+    <div class="student card">
+      <h2>Jennifer Cooper</h2>
+      <a href="./_studentSites/jenn/reference-items/newwebsite.html" target="_blank">Go!</a>
+    </div>
+
+    <div class="student card">
+      <h2>Kristen Rogers Munoz</h2>
+      <a href="./_studentSites/kristen/index.html" target="_blank">Go!</a>
+    </div>
+
+    <div class="student card">
+      <h2>Lori Gray</h2>
+      <a href="./_studentSites/lori/splash.html" target="_blank">Go!</a>
+    </div>
+
+    <div class="student card">
+      <h2>Michelle Earl</h2>
+      <a href="./_studentSites/michelle/Index/index.html" target="_blank">Go!</a>
+    </div>
+
+    <div class="student card">
+      <h2>Melanie Montgomery</h2>
+      <a href="./_studentSites/melanie/Final Project/Index html.HTML" target="_blank">Go!</a>
+    </div>
+
+    <div class="student card">
+      <h2>Nicole Masson</h2>
+      <a href="./_studentSites/nicole/nicolemassonsight.html" target="_blank">Go!</a>
+    </div>
+
+    <!-- <div class="student card">
+      <h2>Rebecca "Becky" Thompson</h2>
+      <a href="./_studentSites/" target="_blank">Go!</a>
+    </div> -->
+
+    <div class="student card">
+      <h2>Samea Nielson</h2>
+      <a href="./_studentSites/samea/HTML/TechMoms.html" target="_blank">Go!</a>
+    </div>
+
+    <!-- <div class="student card">
+      <h2>Stacey Davidson</h2>
+      <a href="./_studentSites/" target="_blank">Go!</a>
+    </div> -->
+
+    <!-- <div class="student card">
+      <h2>Svetlana Ermeeva</h2>
+      <a href="./_studentSites/" target="_blank">Go!</a>
+    </div> -->
+
 
   </div>
-
 
 </body>
 </html>
