Testing corrected url

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="student card">
       <h2>Angelica Nash</h2>
-      <a href="./_studentSites/angelica/index.html" target="_blank">Go!</a>
+      <a href="https://trose16.github.io/_studentSites/angelica/index.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
