Changes file path to student project

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="student card">
       <h2>Bia Bischoff</h2>
-      <a href="./_studentSites/bia/HomePage.html" target="_blank">Go!</a>
+      <a href="./bia/HomePage.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
