index root page with updated student file paths

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 
     <!-- <div class="student card">
       <h2>Amy Wood</h2>
-      <a href="./_studentSites/" target="_blank">Go!</a>
+      <a href="./" target="_blank">Go!</a>
     </div> -->
 
     <div class="student card">
       <h2>Angelica Nash</h2>
-      <a href="https://trose16.github.io/_studentSites/angelica/index.html" target="_blank">Go!</a>
+      <a href="https://trose16.github.io/angelica/index.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
       <h2>Beth Pettey</h2>
-      <a href="./_studentSites/beth/pages/HomePage.html" target="_blank">Go!</a>
+      <a href="./beth/pages/HomePage.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
@@ -50,77 +50,77 @@
 
     <div class="student card">
       <h2>Brittney Tidwell</h2>
-      <a href="./_studentSites/brittney/PROJECT.html" target="_blank">Go!</a>
+      <a href="./brittney/PROJECT.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
       <h2>Catherine Williams</h2>
-      <a href="./_studentSites/catherine/html/1.html" target="_blank">Go!</a>
+      <a href="./catherine/html/1.html" target="_blank">Go!</a>
     </div>
 
     <!-- <div class="student card">
       <h2>Fanny Pena Castillo</h2>
-      <a href="./_studentSites/" target="_blank">Go!</a>
+      <a href="./" target="_blank">Go!</a>
     </div> -->
 
     <div class="student card">
       <h2>Hannah Heideman</h2>
-      <a href="./_studentSites/hannah/specialLife.html" target="_blank">Go!</a>
+      <a href="./hannah/specialLife.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
       <h2>Heidi Hymas</h2>
-      <a href="./_studentSites/heidi/AllieMarie.html" target="_blank">Go!</a>
+      <a href="./heidi/AllieMarie.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
       <h2>Jennifer Cooper</h2>
-      <a href="./_studentSites/jenn/reference-items/newwebsite.html" target="_blank">Go!</a>
+      <a href="./jenn/reference-items/newwebsite.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
       <h2>Kristen Rogers Munoz</h2>
-      <a href="./_studentSites/kristen/index.html" target="_blank">Go!</a>
+      <a href="./kristen/index.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
       <h2>Lori Gray</h2>
-      <a href="./_studentSites/lori/splash.html" target="_blank">Go!</a>
+      <a href="./lori/splash.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
       <h2>Michelle Earl</h2>
-      <a href="./_studentSites/michelle/Index/index.html" target="_blank">Go!</a>
+      <a href="./michelle/Index/index.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
       <h2>Melanie Montgomery</h2>
-      <a href="./_studentSites/melanie/Final Project/Index html.HTML" target="_blank">Go!</a>
+      <a href="./melanie/Final Project/Index html.HTML" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
       <h2>Nicole Masson</h2>
-      <a href="./_studentSites/nicole/nicolemassonsight.html" target="_blank">Go!</a>
+      <a href="./nicole/nicolemassonsight.html" target="_blank">Go!</a>
     </div>
 
     <!-- <div class="student card">
       <h2>Rebecca "Becky" Thompson</h2>
-      <a href="./_studentSites/" target="_blank">Go!</a>
+      <a href="./" target="_blank">Go!</a>
     </div> -->
 
     <div class="student card">
       <h2>Samea Nielson</h2>
-      <a href="./_studentSites/samea/HTML/TechMoms.html" target="_blank">Go!</a>
+      <a href="./samea/HTML/TechMoms.html" target="_blank">Go!</a>
     </div>
 
     <!-- <div class="student card">
       <h2>Stacey Davidson</h2>
-      <a href="./_studentSites/" target="_blank">Go!</a>
+      <a href="./" target="_blank">Go!</a>
     </div> -->
 
     <!-- <div class="student card">
       <h2>Svetlana Ermeeva</h2>
-      <a href="./_studentSites/" target="_blank">Go!</a>
+      <a href="./" target="_blank">Go!</a>
     </div> -->
 
 
