--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div id="flexWrap">
     <div style="width:100%;" id="introTitle">
-      <h3><a href="https://www.tech-moms.org/" target="_blank">Tech Moms Students</a> » MTech Lehi Cohort » Fall 2022 » <a href="./more/play.html" target="_blank">Instructor: Teako Warfield-Graham</a></h3>
+      <h3><a href="https://www.tech-moms.org/" target="_blank">Tech Moms Students</a> » MTech Lehi Cohort » Fall 2022 » <a href="./more/another/play.html" target="_blank">Instructor: Teako Warfield-Graham</a></h3>
     </div>
 
     <!-- <div class="student card">
