Updates a couple links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div id="flexWrap">
     <div style="width:100%;" id="introTitle">
-      <h3><a href="https://www.tech-moms.org/" target="_blank">Tech Moms Students</a> » MTech Lehi Cohort » Fall 2022 » <a href="./more/another/play.html" target="_blank">Instructor: Teako Warfield-Graham</a></h3>
+      <h3><a href="https://www.tech-moms.org/" target="_blank">Tech Moms Students</a> » MTech Lehi Cohort » Fall 2022 » <a href="https://www.linkedin.com/in/teakowg/" target="_blank">Instructor: Teako Warfield-Graham</a></h3>
     </div>
 
     <!-- <div class="student card">
@@ -35,7 +35,7 @@
 
     <div class="student card">
       <h2>Angelica Nash</h2>
-      <a href="https://trose16.github.io/angelica/index.html" target="_blank">Go!</a>
+      <a href="./angelica/index.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
