Renaming Index folder Home to see if it fixes link

--- a/michelle/Home/Index.html
+++ b/michelle/Home/Index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>About Me</title>
+    <title>Michelle's Portfolio</title>
 </head>
 
 <body>
@@ -36,11 +36,27 @@
         </div> <!-- close navbar links class -->
     </nav> <!-- close navbar class -->
 
-    <section class="filler">
-        <h1>Coming soon</h1>
-        <h3>Check back soon!</h3>
-    </section>
-
+    <!-- Hero Selection -->
+    <section class="hero">
+        <div class="heroImage">
+            <a href="../AboutMe/aboutMe.html"><img src="Images/michelleCamping3.jpg"></img></a>
+        </div> <!-- close heroImage class-->
+        <div class="heroText">
+            <div class="heroTextTop">
+                <h3>Hello!</h3>
+                <h3>My Name is</h3>
+                <h1 class="heroName"><em>Michelle</em></h1>
+            </div> <!-- close heroTextTop class-->
+            <div class="heroTextBottom">
+                <h4>Welcome To My</h4>
+                <h3>Tech-moms</h3>
+                <h4>Portfolio</h4>
+            </div> <!-- close heroTextBottom class-->
+            <div class="heroButton">
+                <a href="../Project/Projects.html" class="button">View My Projects</a>
+            </div> <!-- close heroButton class-->
+        </div> <!-- close heroText class-->
+    </section> <!-- close hero class-->
 
     <footer>
         <section class="footerContainer">
@@ -63,6 +79,9 @@
         </section>
 
     </footer>
+
+
+
 </body>
 
 </html>
