--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <div class="student card">
       <h2>Michelle Earl</h2>
-      <a href="./michelle/Index/index.html" target="_blank">Go!</a>
+      <a href="./michelle/Home/index.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
