Updates images path to capital I

--- a/brittney/PROJECT.html
+++ b/brittney/PROJECT.html
@@ -70,18 +70,18 @@
 
         <h4>
             <div class="text" border: solid;>Lavish Lunches!</div>
-            <img src="images/beef.jpg" alt="Lunch" class="image" style="width: 300px; height:400px">
+            <img src="Images/beef.jpg" alt="Lunch" class="image" style="width: 300px; height:400px">
         </h4>
 
         <h3>
 
             <div class="text">Savory Dinners!</div>
-            <img src="images/steak.JPG" alt="Dinner" class="image" style="width: 300px;height: 430px;">
+            <img src="Images/steak.JPG" alt="Dinner" class="image" style="width: 300px;height: 430px;">
         </h3>
 
         <h4>
             <div class="text">Guilty-Pleasure Desserts!</div>
-            <img src="images/reeses.jpg" alt="Dessert" class="image" style="width: 300px; height: 500px;">
+            <img src="Images/reeses.jpg" alt="Dessert" class="image" style="width: 300px; height: 500px;">
         </h4>
 
 
@@ -95,7 +95,7 @@
     <!-- ALL BODY HERE -->
     <style>
         body {
-            background-image: url(images/ingredients.jpg);
+            background-image: url(Images/ingredients.jpg);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
