--- a/brittney/breakfastPage.html
+++ b/brittney/breakfastPage.html
@@ -38,9 +38,9 @@
     </div>
     <h2>Natural Fruit Smoothie, Delicious Chicken & Waffles, and Home-made Waffles & Fruit!</h2>
     <div>
-        <img src="images/smoothie.jpg" alt="Natural Smoothie" width="400" height="580">
-        <img src="images/chickenwaffle.JPG" alt="Chicken&Waffles" width="400" height="580">
-        <img src="images/peanut.JPG" alt="Fruit Waffle" width="350" height="580">
+        <img src="Images/smoothie.jpg" alt="Natural Smoothie" width="400" height="580">
+        <img src="Images/chickenwaffle.JPG" alt="Chicken&Waffles" width="400" height="580">
+        <img src="Images/peanut.JPG" alt="Fruit Waffle" width="350" height="580">
 
 
 
@@ -59,7 +59,7 @@
         }
 
         body {
-            background-image: url(images/cozy.jpg);
+            background-image: url(Images/cozy.jpg);
             background-repeat: no-repeat;
             background-size: cover;
         }
