--- a/brittney/dessertPage.html
+++ b/brittney/dessertPage.html
@@ -35,15 +35,15 @@
                 <h2> Fried Reeses Cups Topped with Syrup and Fruity Pebbles Rice Crispy Treat
                 </h2>
                 <div class="hero" style="height:200px;">
-                    <img src="images/reeses.jpg" alt="Fried Reeses Cups" width="300" height="400">
-                    <img src="images/dessert.JPG" alt="Fruity Pebbles Rice Crispy" width="300" height="400">
+                    <img src="Images/reeses.jpg" alt="Fried Reeses Cups" width="300" height="400">
+                    <img src="Images/dessert.JPG" alt="Fruity Pebbles Rice Crispy" width="300" height="400">
 
 
                 </div>
 
                 <style>
                     body {
-                        background-image: url(images/blue.jpg);
+                        background-image: url(Images/blue.jpg);
                         background-repeat: no-repeat;
                         background-size: cover;
                     }
