--- a/brittney/dinnerPage.html
+++ b/brittney/dinnerPage.html
@@ -39,12 +39,12 @@
             <!-- SECTION 3 -->
 
             <div class="hero" style="height:200px;">
-                <img src="images/italian.jpg" alt="Italian Dinner" width="600" height="400">
+                <img src="Images/italian.jpg" alt="Italian Dinner" width="600" height="400">
                 <h2>Italian Platter</h2>
-                <img src="images/salmon.jpg" alt="Salmon Dinner" width="400" height="500">
+                <img src="Images/salmon.jpg" alt="Salmon Dinner" width="400" height="500">
                 <h2>Honey Garlic Salmon with Rice and Steamed Green Beans</h2>
 
-                <img src="images/steak.JPG" alt="Steak Dinner" width="400" height="500">
+                <img src="Images/steak.JPG" alt="Steak Dinner" width="400" height="500">
                 <h2>Seared Steak Dinner Topped with Herbs</h2>
 
 
@@ -52,7 +52,7 @@
 
             <style>
                 body {
-                    background-image: url(images/din.jpg);
+                    background-image: url(Images/din.jpg);
                     background-repeat: no-repeat;
                     background-attachment: fixed;
                     background-size: cover;
