--- a/brittney/lunchPage.html
+++ b/brittney/lunchPage.html
@@ -34,9 +34,9 @@
             <h2>Salmon & Rice, Home-Made Chicken Noodle Soup, and Smothered Fried!
             </h2>
             <div class="image" style="height:200px;">
-                <img src="images/rice.JPG" alt="Salmon Dish a la Rice" width="440" height="600">
-                <img src="images/soup.JPG" alt="Home-Made Soup Dish" width="400" height="600">
-                <img src="images/yumfries.jpg" alt="Garlic Smothered Fries" width="430" height="580">
+                <img src="Images/rice.JPG" alt="Salmon Dish a la Rice" width="440" height="600">
+                <img src="Images/soup.JPG" alt="Home-Made Soup Dish" width="400" height="600">
+                <img src="Images/yumfries.jpg" alt="Garlic Smothered Fries" width="430" height="580">
 
 
             </div>
@@ -61,7 +61,7 @@
                 }
 
                 body {
-                    background-image: url(images/fries.jpg);
+                    background-image: url(Images/fries.jpg);
                     background-repeat: no-repeat;
                     background-attachment: fixed;
                     background-size: cover;
