--- a/angelica/About.html
+++ b/angelica/About.html
@@ -8,10 +8,6 @@
     <title> Festival Latinoamericano </title>
     <link rel="stylesheet" href="./style.css">
 
-</head>
-
-<body>
-
 
 <div id="navbar">
   <a href="#default"></a>
@@ -25,6 +21,11 @@
   </div>
 </div> 
 
+</head>
+
+<body>
+
+
 <!--big picture in the middle-->
 <div class="mySlides fade">
     <img src="./asset/team2021.jpeg" style="width:100%">
@@ -34,8 +35,6 @@
   </div>
 
 <!--flexbox with three columns-->
- 
- </header>
  
 <div class="flexWrapper">
   <div class="box2" id="nested">
@@ -71,6 +70,21 @@
 </header>
 
 </body>
+
+<!--Footer -->
+<footer>   
+  <div id="footer">
+    <div class="flex-container">
+        <div class="flex-container">
+            <div>
+                <a href="https://www.facebook.com/festivalprovo/"><img src="./FB.png"style="width:40px" style="height:25%" max-height="30px"></i></a></li>
+                <a href="https://www.instagram.com/festivalprovo/"><img src="./IG.png" style="width:40px" style="height:25%">
+            </div> 
+        </div>
+    </div>
+  </div>
+</footer>
+
 
 
 <script src="./index.js"></script>
