--- a/angelica/Performers.html
+++ b/angelica/Performers.html
@@ -8,11 +8,6 @@
     <title> Festival Latinoamericano </title>
     <link rel="stylesheet" href="./style.css">
 
-</head>
-
-<body>
-
-
 
 <div id="navbar">
   <a href="#default"></a>
@@ -26,11 +21,15 @@
   </div>
 </div> 
 
+</head>
+
+<body>
+
 <!-- Main section-->
 <header id="hero" class="navbox">
 
-  <div id="contentWrapper2">
-     <ul id="navWrap2" class="box"> 
+  <div id="contentWrapper">
+     <ul id="navWrap" class="box"> 
  
    <div class="slideshow-container">
  
@@ -104,6 +103,20 @@
 
 
 </body>
+
+<!--Footer -->
+<footer>   
+    <div id="footer">
+    <div class="flex-container">
+        <div class="flex-container">
+            <div>
+                <a href="https://www.facebook.com/festivalprovo/"><img src="./FB.png"style="width:40px" style="height:25%" max-height="30px"></i></a></li>
+                <a href="https://www.instagram.com/festivalprovo/"><img src="./IG.png" style="width:40px" style="height:25%">
+            </div> 
+        </div>
+    </div>
+    </div>
+</footer>
 
 
 <script src="./index.js"></script>
