--- a/angelica/index.html
+++ b/angelica/index.html
@@ -3,12 +3,11 @@
 <html lang="en" dir="ltr">
 <head>
 
-  <!-- <meta charset="utf-8">-->
    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Festival Latinoamericano </title>
     <link rel="stylesheet" href="./style.css">
 
-</head>
+
 <div id="navbar">
   <a href="#default"></a>
   <img src="./FLA20horizontal.png" width="400" height="100">
@@ -20,6 +19,7 @@
     <a href="./About.html">About</a>
   </div>
 </div> 
+</head>
 
 <body>
 
@@ -36,6 +36,20 @@
 </header>
 
 </body>
+
+  <!--Footer -->
+  <footer>   
+    <div id="footer">
+    <div class="flex-container">
+        <div class="flex-container">
+            <div>
+                <a href="https://www.facebook.com/festivalprovo/"><img src="./FB.png"style="width:40px" style="height:25%" max-height="30px"></i></a></li>
+                <a href="https://www.instagram.com/festivalprovo/"><img src="./IG.png" style="width:40px" style="height:25%">
+            </div> 
+        </div>
+    </div>
+    </div>
+  </footer>
 
 
 <script src="./index.js"></script>
