--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 
-
 </head>
 
 
@@ -28,10 +27,10 @@
       <h3><a href="https://www.tech-moms.org/" target="_blank">Tech Moms Students</a> » MTech Lehi Cohort » Fall 2022 » <a href="https://www.linkedin.com/in/teakowg/" target="_blank">Instructor: Teako Warfield-Graham</a></h3>
     </div>
 
-    <!-- <div class="student card">
+    <div class="student card">
       <h2>Amy Wood</h2>
-      <a href="./" target="_blank">Go!</a>
-    </div> -->
+      <a href="./amy/desktop-1.html" target="_blank">Go!</a>
+    </div>
 
     <div class="student card">
       <h2>Angelica Nash</h2>
@@ -58,10 +57,10 @@
       <a href="./catherine/html/1.html" target="_blank">Go!</a>
     </div>
 
-    <!-- <div class="student card">
+    <div class="student card">
       <h2>Fanny Pena Castillo</h2>
-      <a href="./" target="_blank">Go!</a>
-    </div> -->
+      <a href="./fanny/final.html" target="_blank">Go!</a>
+    </div>
 
     <div class="student card">
       <h2>Hannah Heideman</h2>
@@ -103,13 +102,13 @@
       <a href="./nicole/nicolemassonsight.html" target="_blank">Go!</a>
     </div>
 
-    <!-- <div class="student card">
+    <div class="student card">
       <h2>Rebecca "Becky" Thompson</h2>
-      <a href="./" target="_blank">Go!</a>
-    </div> -->
+      <a href="./becky/author.html" target="_blank">Go!</a>
+    </div>
 
     <div class="student card">
-      <h2>Samea Nielson</h2>
+      <h2>Samea Hampton</h2>
       <a href="./samea/HTML/TechMoms.html" target="_blank">Go!</a>
     </div>
 
