--- a/michelle/ContactMe/contactMe.html
+++ b/michelle/ContactMe/contactMe.html
@@ -28,7 +28,7 @@
         <!-- page navagation links -->
         <div class="navbar-links">
             <ul>
-                <li><a href="../Home/Index.html">Home</a></li>
+                <li><a href="../Index.html">Home</a></li>
                 <li><a href="../Project/Projects.html">Projects</a></li>
                 <li><a href="../AboutMe/aboutMe.html">About Me</a></li>
                 <li><a href="../ContactMe/contactMe.html">Contact Me</a></li>
@@ -52,7 +52,7 @@
             </div>
 
             <ul class="list">
-                <li><a href="../Home/Index.html">Home</a></li>
+                <li><a href="../Index.html">Home</a></li>
                 <li><a href="../Project/Projects.html">Projects</a></li>
                 <li><a href="../AboutMe/aboutMe.html">About Me</a></li>
                 <li><a href="../ContactMe/contactMe.html">Contact Me</a></li>
