--- a/michelle/Project/Projects.html
+++ b/michelle/Project/Projects.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Index/styles.css">
-    <link rel="stylesheet" href="../Index/nav.css">
+    <link rel="stylesheet" href="../Home/styles.css">
+    <link rel="stylesheet" href="../Home/nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -28,7 +28,7 @@
         <!-- page navagation links -->
         <div class="navbar-links">
             <ul>
-                <li><a href="../Index/Index.html">Home</a></li>
+                <li><a href="../Index.html">Home</a></li>
                 <li><a href="../Project/Projects.html">Projects</a></li>
                 <li><a href="../AboutMe/aboutMe.html">About Me</a></li>
                 <li><a href="../ContactMe/contactMe.html">Contact Me</a></li>
@@ -70,7 +70,7 @@
         <div class="projectCard">
             <h2>Final Project</h2>
             <p><em>Final Project for My Portfolio.</em></p>
-            <a href="../Index/Index.html"><img src="../Project/Images/PortfolioWebsite.jpg"></a>
+            <a href="../Index.html"><img src="../Project/Images/PortfolioWebsite.jpg"></a>
             <p>Week Eight</p>
             <p><em>Click image above to see my project.</em></p>
             <div class="projectIcons"></div>
@@ -89,7 +89,7 @@
             </div>
 
             <ul class="list">
-                <li><a href="../Index/Index.html">Home</a></li>
+                <li><a href="../Index.html">Home</a></li>
                 <li><a href="../Project/Projects.html">Projects</a></li>
                 <li><a href="../AboutMe/aboutMe.html">About ME</a></li>
                 <li><a href="../ContactMe/contactMe.html">Contact Me</a></li>
