Revised Bia's Stylesheet so they may work

--- a/bia/Skills.html
+++ b/bia/Skills.html
@@ -8,11 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills </title>
-    <link rel="stylesheet" href="Stylestest.css">
+    <!-- <link rel="stylesheet" href="Stylestest.css">
     <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="Contact_Form.css">
     <link rel="stylesheet" href="Layout.css">
-    <link rel="stylesheet" href="Animation_Text.css">
+    <link rel="stylesheet" href="Animation_Text.css"> -->
+
+    <link rel="stylesheet" href="./master.css">
+
     <!-- <link rel="stylesheet" href="Skill_Circle.css"> -->
 
     <style>
