--- a/bia/Contact Me.html
+++ b/bia/Contact Me.html
@@ -8,10 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me Form </title>
-    <link rel="stylesheet" href="Contact_Form.css">
+    <!-- <link rel="stylesheet" href="Contact_Form.css">
     <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="Layout.css">
-    <link rel="stylesheet" href="Stylestest.css">
+    <link rel="stylesheet" href="Stylestest.css"> -->
+
+      <link rel="stylesheet" href="./master.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
     </style>
