--- a/bia/HomePage.html
+++ b/bia/HomePage.html
@@ -8,15 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bianca Bischoff - Data Science </title>
-    <link rel="stylesheet" href="navigation.css">
+    <!-- <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="Layout.css">
     <link rel="stylesheet" href="Stylestest.css">
-    <link rel="stylesheet" href="Contact_Form.css">
-    <script src="https://kit.fontawesome.com/c43283606e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="Contact_Form.css"> -->
 
-    <style>
+    <link rel="stylesheet" href="./master.css">
 
-    </style>
+
 </head>
 
 <!-- Content for our website -->
@@ -95,6 +94,8 @@
             </div>
         </div>
     </div>
+
+    <script src="https://kit.fontawesome.com/c43283606e.js" crossorigin="anonymous"></script>
 
 </body>
 
