Updates link to Michelle's site

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <div class="student card">
       <h2>Michelle Earl</h2>
-      <a href="./michelle/Home/index.html" target="_blank">Go!</a>
+      <a href="./michelle/index.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
