Fixes Image Link

--- a/brittney/PROJECT.html
+++ b/brittney/PROJECT.html
@@ -70,7 +70,7 @@
 
         <h4>
             <div class="text" border: solid;>Lavish Lunches!</div>
-            <img src="Images/beef.jpg" alt="Lunch" class="image" style="width: 300px; height:400px">
+            <img src="Images/beef.JPG" alt="Lunch" class="image" style="width: 300px; height:400px">
         </h4>
 
         <h3>
