Updates to add generic message

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="student card">
       <h2>Angelica Nash</h2>
-      <a href="./angelica/index.html" target="_blank">Go!</a>
+      <a href="./generic.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
@@ -44,7 +44,7 @@
 
     <div class="student card">
       <h2>Bia Bischoff</h2>
-      <a href="./bia/HomePage.html" target="_blank">Go!</a>
+      <a href="./generic.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
@@ -89,7 +89,7 @@
 
     <div class="student card">
       <h2>Michelle Earl</h2>
-      <a href="./michelle/index.html" target="_blank">Go!</a>
+      <a href="./michelle/Index.html" target="_blank">Go!</a>
     </div>
 
     <div class="student card">
