Updates Brittany's nav links

--- a/brittney/PROJECT.html
+++ b/brittney/PROJECT.html
@@ -32,10 +32,10 @@
             </div>
 
             <nav>
-                <a href="./breakfast/">Hearty Breakfast</a>
-                <a href="./lunch/">Lavish Lunches</a>
-                <a href="./dinner/">Savory Dinners</a>
-                <a href="./dessert/">Guilty-Pleasure Desserts</a>
+                <a href="./breakfastPage.html">Hearty Breakfast</a>
+                <a href="./lunchPage.html">Lavish Lunches</a>
+                <a href="./dinnerPage.html">Savory Dinners</a>
+                <a href="./dessertPage.html">Guilty-Pleasure Desserts</a>
 
             </nav>
 
