--- a/brittney/dinnerPage.html
+++ b/brittney/dinnerPage.html
@@ -21,10 +21,10 @@
         </p>
 
         <div class="navbar">
-            <a href="./breakfast/">Hearty Breakfasts</a>
-            <a href="./lunch/">Lavish Lunches</a>
-            <a href="./dinner/">Savory Dinners</a>
-            <a href="./dessert/" class="right">Guilty-Pleasure Desserts</a>
+          <a href="./breakfastPage.html">Hearty Breakfast</a>
+          <a href="./lunchPage.html">Lavish Lunches</a>
+          <a href="./dinnerPage.html">Savory Dinners</a>
+          <a href="./dessertPage.html">Guilty-Pleasure Desserts</a>
         </div>
 
         <!-- SECTION 2 -->
