--- a/lori/Leilani.html
+++ b/lori/Leilani.html
@@ -15,71 +15,74 @@
     <div class="box pageWrap">
 
         <!-- section 1 -->
-        <div class="section">
+
+        <div class="topNavBox">
             <ul id="topNav">
-                <li><a href="#">FILM REEL</a></li>
-                <li><a href="https://www.youtube.com/watch?v=dN4s5f6H-Ik">LEILANI GRAY</a></li>
-                <li><a href="#">LEILANI RESUME</a></li>
+                <li class="film"><a href="https://www.youtube.com/watch?v=dN4s5f6H-Ik">FILM WORK</a></li>
+                <li></li><img src="./Leilani Logo.png"></li>
+                <li class="resume"><a href="./Leilani Gray ‘22 (1).pdf">LEILANI RESUME</a></li>
             </ul>
         </div>
 
         <!-- section 2 -->
         <div class="section1">
-            <img src="../portfolio/132A0458.jpg" class="box horse">
+            <img src="./132A0458.jpg" class="box-horse">
         </div>
-
-
 
         <!-- section 3 gallery-->
         <div class="section gallery flex">
 
             <ul class="navWrap">
-                <li> <a href="#">STUNT GIRL</a> </li>
-                <li> <a href="#">The CHOSEN</a> </li>
-                <li> <a href="#">Commercial work </a> </li>
+                <li class="stunt"> <a
+                        href="https://www.youtube.com/watch?v=aJ__t_3Ksu4&list=PLWHql2MOiVzpQXnfsikmyznggcLe64KXd&index=20">STUNT
+                        GIRL</a> </li>
+                <li class="chosen"> <a
+                        href="https://www.angel.com/watch/the-chosen/episode/d4a7ed5d-2805-4879-90e7-c906a6fabea8/season-2/episode-2/i-saw-you">The
+                        CHOSEN</a> </li>
+                <li class="commercial"> <a href="#">ATHLETIC REEL </a> </li>
             </ul>
-            ​
+
             <!-- GALLERY SECTION START -->
             <div class="galleryWrap">
-                ​
+
                 <div class="galleryCard">
                     <img src="./132A0468.jpg" alt="girl">
-                    <h3>Card Title</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h3>Bridal Up chose Leilani as their model for marketing.</h3>
+                    <p>Leilani is a happy cheerful youth. </p>
                 </div>
                 <div class="galleryCard">
                     <img src="./132A0456.jpg" alt="girl">
-                    <h3>Card Title</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h3>Leilani and Maui</h3>
+                    <p>Leilani loves to ride, and is trained in English and Western style.</p>
                 </div>
-                ​
+
                 <div class="galleryCard">
                     <img src="./Leilanimaui.jpg" alt="girl">
-                    <h3>Card Title</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h3>Lorigcasting@gmail.com</h3>
+                    <p>call 385-331-9484 Book</p>
                 </div>
-                ​
+
                 <div class="galleryCard">
-                    <img src="./IMG_2203.jpeg" alt="girl">
-                    <h3>Card Title</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <img src="./Lheadshot.jpg" alt="girl">
+                    <h3>Headshot</h3>
+                    <p>Leilani is an athlete, she actively plays volleyball, softball, and cheer.</p>
                 </div>
-                ​
+
                 <div class="galleryCard">
                     <img src="./CU8A2799.jpg" alt="girl">
-                    <h3>Card Title</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h3>Leilani Cheer Team 2022</h3>
+                    <p>Leilani is trained in Dance and cheer.</p>
                 </div>
-                ​
+
                 <div class="galleryCard">
                     <img src="./CU8A2807.jpg" alt="girl">
-                    <h3>Card Title</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h3>Leilani Gray</h3>
+                    <p>Utah based.</p>
                 </div>
-                ​
+
             </div>
             <!-- GALLERY SECTION END -->
-            ​
+
             --
         </div>
 
@@ -87,35 +90,6 @@
 
         <!-- section 4 footer -->
         <div class="section"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     </div>
